--- a/cmd/goback/static/settings.html
+++ b/cmd/goback/static/settings.html
@@ -30,155 +30,262 @@
             </small>
         </h1>
     </div>
+        <!--
+    <div class="row">
+        <div class="col-xl-6">
+            <div class="card border mb-g">
+                <div class="card-header bg-fusion-500 pr-3 d-flex align-items-center flex-wrap">
+                    <div class="card-title">Dropdowns</div>
+                    <div class="dropdown-menu dropdown-menu-animated dropdown-menu-right">
+                        <button class="dropdown-item">
+                            Option 1
+                        </button>
+                        <button class="dropdown-item">
+                            Option 2
+                        </button>
+                        <div class="dropdown-divider m-0"></div>
+                        <button class="dropdown-item">
+                            Refresh
+                        </button>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                </div>
+            </div>
+            <div class="card border mb-4 mb-xl-0">
+                <div class="card-header bg-trans-gradient py-2 pr-2 d-flex align-items-center flex-wrap">
+                    <div class="card-title text-white">Input</div>
+                </div>
+                <div class="card-body">
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-xl-6">
+            <div class="card border mb-g">
+                <div class="card-header bg-danger-700 pr-3 d-flex align-items-center flex-wrap">
+                    <div class="card-title">Buttons</div>
+                </div>
+                <div class="card-body">
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                </div>
+            </div>
+            <div class="card border mb-0">
+                <div class="card-header bg-success-500 d-flex pr-2 align-items-center flex-wrap">
+                    <div class="card-title">Checkbox</div>
+                    <div class="custom-control d-flex custom-switch ml-auto">
+                        <input id="demo-switch" type="checkbox" class="custom-control-input" checked="checked">
+                        <label class="custom-control-label fw-500" for="demo-switch"></label>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#tab_default-1" role="tab" aria-selected="true">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#tab_default-3" role="tab" aria-selected="false">Set</a></li>
+                        </ul>
+                        <div class="tab-content p-3">
+                            <div class="tab-pane fade" id="tab_default-1" role="tabpanel">
+                                ㅁㅁㅁㅁㅁ
+                            </div>
+                            <div class="tab-pane fade active show" id="tab_default-3" role="tabpanel">
+                                bbbbb
+                            </div>
+                        </div>
+        -->
 
     <div class="row">
         <div class="col-md-4">
-            {{range $i, $s := .Settings.Storages}}
-                <div class="card border mb-2">
-                    <div class="card-header py-2">
-                        <div class="card-title">
-                            Storage #{{$s.Id}}
+            {{range $i, $storage := .Settings.Storages}}
+                <form class="form" data-id="{{$storage.Id}}" data-type="storage">
+                <input type="hidden" name="id" value="{{$storage.Id}}"/>
+
+                <div class="card border mb-4">
+{{/*                    <div class="card-header bg-trans-gradient py-2 pr-2 d-flex align-items-center flex-wrap">*/}}
+                    <div class="card-header bg-trans-gradient d-flex pr-2 align-items-center flex-wrap">
+                        <div class="card-title text-white">
+                            Storage -
+                            {{if eq $storage.Id 1}}
+                                Local Disk
+                            {{else if eq $storage.Id 2}}
+                                SFTP
+                            {{end}}
                         </div>
                     </div>
                     <div class="card-body">
-                        <blockquote class="blockquote mb-0">
-                            {{if eq $s.Protocol "local"}}
-                            <p>
-                                <i class="fal fa-database"></i> {{$s.Dir}}
-                            </p>
-                            <footer class="blockquote-footer">
-                                Local Disk
-                            </footer>
-                            {{else if eq $s.Protocol "sftp"}}
-                                <p>Hostname: {{$s.Host}}</p>
-                                <p>Port: {{$s.Port}}</p>
-                                <footer class="blockquote-footer">
-                                    SFTP
-                                </footer>
+
+                        {{if eq $storage.Protocol "local"}}
+                        <div class="form-group">
+                            <label class="form-label">Local</label>
+                            <input type="text" name="dir" class="form-control {{if DirExists $storage.Dir  }}is-valid{{else}}is-invalid{{end}}"  value="{{$storage.Dir}}" />
+                            {{if eq (DirExists $storage.Dir) false }}
+                            <div class="invalid-feedback">
+                                Directory does not exist
+                            </div>
                             {{end}}
-                        </blockquote>
+                        </div>
+
+                        {{else if eq $storage.Protocol "sftp"}}
+                        <div class="row">
+                            <div class="col-lg-8">
+                                <div class="form-group">
+                                    <label class="form-label">Hostname</label>
+                                    <input type="text" name="host" class="form-control" value="{{$storage.Host}}">
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="form-group">
+                                    <label class="form-label">Port</label>
+                                    <input type="text" name="port" class="form-control" value="{{$storage.Port}}">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row mt-3">
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label class="form-label">Hostname</label>
+                                    <input type="text" name="username" class="form-control" value="{{$storage.Username}}">
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label class="form-label">Password</label>
+                                    <input type="text" name="password" class="form-control" value="{{$storage.Password}}">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group mt-3">
+                            <label class="form-label">Directory</label>
+                            <input type="text" name="username" class="form-control" value="{{$storage.Dir}}">
+                        </div>
+                        {{end}}
+                    </div>
+                    <div class="card-body">
+                        <button class="btn btn-primary float-right">Update</button>
                     </div>
                 </div>
+            </form>
             {{end}}
         </div>
         <div class="col-md-8">
-            <div class="row">
-                {{range $idx, $job := .Settings.Jobs}}
+            {{range $idx, $job := .Settings.Jobs}}
+            <form class="form" data-id="{{$job.Id}}" data-type="job">
+                <input type="hidden" name="id" value="{{$job.Id}}"/>
+                <input type="hidden" name="backupType" value="{{$job.BackupType}}"/>
 
-                    <div class="col-6">
-                        <form class="form-job" data-id="{{$job.Id}}">
-                            <input type="hidden" name="id" value="{{$job.Id}}"/>
-                            <input type="hidden" name="backupType" value="{{$job.BackupType}}"/>
-
-                            <div id="job-{{$job.Id}}" class="panel panel-sortable" role="widget">
-                                <div class="panel-hdr" role="heading">
-                                    <h2>Job #{{$job.Id}} </h2>
-                                    <div class="panel-saving mr-2" style="display:none">
-                                        <i class="fal fa-spinner-third fa-spin-4x fs-xl"></i>
-                                    </div>
-                                    <div class="panel-toolbar" role="menu">
-                                        <a href="#" class="btn btn-toolbar-master waves-effect waves-themed" data-toggle="dropdown">
-                                            <i class="fal fa-ellipsis-v"></i>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-animated dropdown-menu-right p-0">
-                                            <a href="#" class="dropdown-item text-danger">
-                                                <span data-i18n="drpdwn.refreshpanelr"><i class="far fa-trash"></i> Delete</span>
-                                            </a>
-                                            <a href="#" class="dropdown-item js-panel-locked">
-                                                <span data-i18n="drpdwn.lockpanel">Enable</span>
-                                            </a>
-                                            <a href="#" class="dropdown-item js-panel-reset">
-                                                <span data-i18n="drpdwn.resetpanel">Disable</span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="panel-container" role="content"><div class="loader"><i class="fal fa-spinner-third fa-spin-4x fs-xxl"></i></div>
-                                    <div class="panel-content">
-                                        <div class="row">
-                                            <div class="col-5">
-                                                <div class="form-group">
-                                                    <label class="form-label">Storage</label>
-                                                    <input type="text" name="storageId" class="form-control" value="{{$job.StorageId}}" readonly>
-                                                </div>
-
-                                            </div>
-                                            <div class="col-7">
-                                                <div class="form-group">
-                                                    <label class="form-label" for="simpleinputInvalid">Schedule</label>
-                                                    <input type="text" name="schedule" class="form-control"  value="{{$job.Schedule}}">
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <p class="form-label mt-4 mb-2">Directories to backup</p>
-                                        {{range $j, $dirName := $job.SrcDirs }}
-                                            <div class="form-group mb-2">
-                                                <input type="text" name="srcDirs" class="form-control {{if  DirExists $dirName  }}is-valid{{else}}is-invalid{{end}}" value="{{$dirName}}">
-                                            </div>
-                                        {{end}}
-
-                                        <div>
-                                            <button class="btn btn-primary">Update</button>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </form>
+                <div class="card border mb-4">
+                    <div class="card-header d-flex pr-2 align-items-center flex-wrap">
+                        <div class="card-title">Backup Job #{{$job.Id}} </div>
+                        <div class="custom-control d-flex custom-switch ml-auto">
+                            <input id="job-checkbox-{{$job.Id}}" type="checkbox" name="enabled" class="custom-control-input" {{if $job.Enabled}}checked{{end}}>
+                            <label class="custom-control-label fw-500" for="job-checkbox-{{$job.Id}}"></label>
+                        </div>
                     </div>
-                {{end}}
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-5">
+                                <div class="form-group">
+                                    <label class="form-label">Storage</label>
+                                    <select class="form-control selectpicker" name="storageId" data-style="btn-default">
+                                        <option value="1">Local Disk</option>
+                                        <option value="2">SFTP</option>
+                                    </select>
 
-            </div>
+                                </div>
+                            </div>
+                            <div class="col-7">
+                                <div class="form-group">
+                                    <label class="form-label">Schedule</label>
+                                    <input type="text" name="schedule" class="form-control"  value="{{$job.Schedule}}">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="directory">
+                            <p class="form-label mt-3 mb-2">
+                                Directories to backup
+                                <a href="javascript:void(0);" class="btn btn-primary btn-xs btn-icon createDir">
+                                    <i class="fal fa-plus"></i>
+                                </a>
+                            </p>
+
+                            <div class="dirs">
+                                {{range $j, $dirName := $job.SrcDirs }}
+                                <div class="form-group mb-2 input-dir">
+                                    <div class="row">
+                                        <div class="col-10">
+                                            <input type="text" name="srcDirs"
+                                                   class="form-control {{if DirExists $dirName  }}is-valid{{else}}is-invalid{{end}}"
+                                                   value="{{$dirName}}" />
+                                            {{if eq (DirExists $dirName) false }}
+                                            <div class="invalid-feedback">
+                                                Directory does not exist
+                                            </div>
+                                            {{end}}
+                                        </div>
+                                        <div class="col-2">
+                                            <a href="javascript:void(0);" class="removeDir"><i class="fal fa-times"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                {{end}}
+                            </div>
+                        </div>
+
+                        <div class="float-right">
+                            <button type="button" class="btn btn-danger">Run backup</button>
+                            <button class="btn btn-primary">Update</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+            {{end}}
+
         </div>
     </div>
 {{end}}
 
 {{define "script"}}
     <script>
-        $(".form-job").each(function() {
+        $(".form").each(function() {
             let c = $(this);
             $(this).validate({
                 submitHandler: function (form, e) {
                     e.preventDefault();
-                    let $form = $(this.currentForm);
-                    // console.log($form.data("id"));
-
-                    let url = "/settings/job/id/"+$form.data("id");
-                    console.log(url);
-                    console.log($form);
-                    console.log($form.serialize());
+                    let $form = $(this.currentForm),
+                        url = "/settings/" + $form.data("type") + "/id/"+$form.data("id");
                     $.ajax({
                         url: url,
                         type: "PATCH",
                         data: $form.serialize(),
                     }).done(function (data) {
-                        console.log(data);
-                        // $(".result-message", c).html('<i class="fa fa-check"></i> ' + langMap["updated"]);
-                        // setTimeout(function() {
-                        //     $(".result-message", c).empty();
-                        // }, 1000);
+                        window.location.reload();
                     }).fail(function (jqXHR, textStatus, errorThrown) {
                         console.error(jqXHR);
                         Swal.fire("Error", jqXHR.message, "warning");
                     }).always(function() {
 
                     });
-
-
                 },
-                rules: {
-                    // alarmSmsMobiles: {
-                    //     required: true,
-                    //     minlength: 10,
-                    // },
-                    // alarmSmsInterval: {
-                    //     min: 60,
-                    // }
-                }
             });
+        });
 
+        $(".removeDir").click(function(e) {
+            e.preventDefault();
+            $(this).closest(".input-dir").remove();
+        });
+        $(".createDir").click(function(e) {
+            e.preventDefault();
+            let elm = '<div class="form-group mb-2 input-dir"><div class="row"><div class="col-10"><input type="text" name="srcDirs" class="form-control"/></div><div class="col-2"><a href="javascript:void(0);" class="removeDir"><i class="fal fa-times"></i></a></div></div></div>';
+            $(this).closest(".directory").find(".dirs").append($(elm));
         });
     </script>
 {{end}}
