--- a/cmd/goback/static/settings.html
+++ b/cmd/goback/static/settings.html
@@ -37,8 +37,8 @@
                 <input type="hidden" name="id" value="{{$storage.Id}}"/>
 
                 <div class="card border mb-4">
-                    <div class="card-header bg-trans-gradient d-flex pr-2 align-items-center flex-wrap">
-                        <div class="card-title text-white">
+                    <div class="card-header d-flex pr-2 align-items-center flex-wrap">
+                        <div class="card-title">
                             Storage -
                             {{if eq $storage.Id 1}}
                                 Local Disk
