added boltdb for summary db

--- a/cmd/goback/static/backup.html
+++ b/cmd/goback/static/backup.html
@@ -59,6 +59,7 @@
                     <thead>
                     <tr>
                         <th data-field="id" data-sortable="true">ID</th>
+                        <th data-field="backupId" data-sortable="true">Backup ID</th>
                         <th data-field="date" data-sortable="true" data-formatter="dateFormatter">Date</th>
                         <th data-field="srcDir" data-sortable="true" data-formatter="shortDirFormatter">Source</th>
                         <th data-field="keeper.protocol" data-sortable="true" data-formatter="backupKeeperFormatter">Storage</th>
