db to boltdb fixed ui bugs

--- a/cmd/goback/static/settings.html
+++ b/cmd/goback/static/settings.html
@@ -93,7 +93,7 @@
 
                         <div class="form-group mt-3">
                             <label class="form-label">Directory</label>
-                            <input type="text" name="username" class="form-control" value="{{$storage.Dir}}">
+                            <input type="text" name="dir" class="form-control" value="{{$storage.Dir}}">
                         </div>
                         {{end}}
                     </div>
